trying to make scraping featuerd image dynamic, it's not workinggg

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -153,20 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/spaceimages/images/mediumsize/PIA18433_ip.jpg'"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "##Find image URL of featured image \n",
     "html = browser.html\n",
@@ -178,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,23 +180,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://www.jpl.nasa.gov/spaceimages/images/mediumsize/PIA16815_ip.jpg'"
+       "'https://www.jpl.nasa.gov/spaceimages/images/mediumsize/PIA18433_ip.jpg'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "##Concatenate base_url and image url\n",
-    "full_url = base_url + image\n",
+    "full_url = base_url + featured_image\n",
     "full_url"
    ]
   },
