I think I fixed featured image issue?

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "\"NASA Readies Perseverance Mars Rover's Earthly Twin\""
       ]
      },
-     "execution_count": 6,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "\"Did you know NASA's next Mars rover has a nearly identical sibling on Earth for testing? Even better, it's about to roll for the first time through a replica Martian landscape.\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,29 +153,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/spaceimages/images/wallpaper/PIA24085-640x350.jpg'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "##Find image URL of featured image \n",
     "html = browser.html\n",
     "soup = bs(html, 'html.parser')\n",
-    "featured_image_container = soup.find_all('div', class_='fancybox-wrap fancybox-dark fancybox-type-image fancybox-desktop fancybox-dark-desktop fancybox-open')\n",
-    "featured_image_container = featured_image_container[0]\n",
-    "featured_image = featured_image_container.find_all('img')\n"
+    "featured_image_rel_path = soup.find_all('img')[3][\"src\"]\n",
+    "featured_image_rel_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA24085-640x350.jpg'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "##Parse featured_image object to be complete image url\n",
-    "##just appending https://www.jpl.nasa.gov to beginning\n",
-    "featured_image = featured_image[0]['src']\n",
-    "featured_image\n",
-    "base_url = 'https://www.jpl.nasa.gov'"
+    "##Append base URL for JPL to featured image\n",
+    "base_url = 'https://www.jpl.nasa.gov'\n",
+    "featured_image_url = base_url + featured_image_rel_path\n",
+    "featured_image_url"
    ]
   },
   {
