Table of mars facts is now in its own html, and i think the final find featured image thing is actually working

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,8 @@
     "from bs4 import BeautifulSoup as bs\n",
     "import requests\n",
     "import pymongo\n",
-    "from splinter import Browser"
+    "from splinter import Browser\n",
+    "import time"
    ]
   },
   {
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,27 +143,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "##Set up URL to visit using chromedriver\n",
     "url = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'\n",
-    "browser.visit(url)"
+    "browser.visit(url)\n",
+    "#Click 'full image'\n",
+    "browser.click_link_by_partial_text('FULL IMAGE')\n",
+    "time.sleep(5)\n",
+    "#Go to 'more info'\n",
+    "browser.click_link_by_partial_text('more info')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/spaceimages/images/wallpaper/PIA24085-640x350.jpg'"
+       "'/spaceimages/images/largesize/PIA17900_hires.jpg'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,22 +177,22 @@
     "##Find image URL of featured image \n",
     "html = browser.html\n",
     "soup = bs(html, 'html.parser')\n",
-    "featured_image_rel_path = soup.find_all('img')[3][\"src\"]\n",
+    "featured_image_rel_path = soup.find('figure', class_='lede').a['href']\n",
     "featured_image_rel_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA24085-640x350.jpg'"
+       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA17900_hires.jpg'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
